X01BD: lineage -> xtended
Signed-off-by: Sonal Singh <sonal.singh.19993@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -246,4 +246,7 @@
     <dimen name="status_bar_height_portrait">81px</dimen>
     <dimen name="status_bar_height_landscape">81px</dimen>
 
+    <!-- Whether device has a notch -->
+    <bool name="config_haveNotch">true</bool>
+
 </resources>
